--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
 
     <title>Curve Solver</title>
 
-    <link rel="icon" type="image/png" href="./favicon.png" />
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./build/bundle.css" />
+    <link rel="icon" type="image/png" href="./favicon.png?v=1749196235321" />
+    <link rel="stylesheet" href="./global.css?v=1749196235321" />
+    <link rel="stylesheet" href="./build/bundle.css?v=1749196235321" />
 
-    <script defer src="./build/bundle.js"></script>
+    <script defer src="./build/bundle.js?v=1749196235321"></script>
   </head>
 
   <body></body>
